@@ -1,3 +1,8 @@
+2013-01-04  Nick Clifton  <nickc@redhat.com>
+
+	* config/v850/lib1funcs.S: Only provide CALLT support functions if
+	the CALLT instruction is supported.
+
 2012-12-20  Jonathan Wakely  <jwakely.gcc@gmail.com>
 
 	* gthr.h (__gthread_cond_timedwait_recursive): Do not require.
